--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo">AA.</div>
+            <div class="logo">ADEWOLE ADEWALE</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -796,13 +796,13 @@
             <h2 class="section-title">Let's Build Something Amazing</h2>
             <p>I'm always excited to work on new projects and collaborate with innovative teams. Let's discuss how we can bring your mobile app ideas to life!</p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="contact-link">
+                <a href="mailto:sundayadewole1997@gmail.com" class="contact-link">
                     <span>✉️</span> Email Me
                 </a>
-                <a href="https://linkedin.com/in/yourprofile" class="contact-link">
+                <a href="https://linkedin.com/in/adewole-adewale-ba45ab147" class="contact-link">
                     <span>💼</span> LinkedIn
                 </a>
-                <a href="https://github.com/yourusername" class="contact-link">
+                <a href="https://github.com/adewoleadewale" class="contact-link">
                     <span>📂</span> GitHub
                 </a>
             </div>
