--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Hi, I'm <span class="gradient-text">Adewole Adewale</span></h1>
+                <h1>Hi, I'm <span class="gradient-text">ADEWOLE ADEWALE</span></h1>
                 <p>Crafting exceptional mobile experiences with Xamarin, .NET MAUI, and cutting-edge technologies</p>
                 <div class="location">
                     <span>📍</span> Abuja, Nigeria
