--- a/index.html
+++ b/index.html
@@ -234,22 +234,22 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
 
 <!-- SOCIAL ROW -->
 <div class="sr reveal">
-  <a href="https://github.com/adebayo-jzs" target="_blank" class="si">
+  <a href="https://github.com/AdewoleAdewale" target="_blank" class="si">
     <div class="sic"><svg viewBox="0 0 24 24"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"/></svg></div>
     <span class="slb">GITHUB</span>
   </a>
-  <a href="https://linkedin.com/in/theebayo" target="_blank" class="si">
+  <a href="https://www.linkedin.com/in/adewole-adewale-ba45ab147/" target="_blank" class="si">
     <div class="sic"><svg viewBox="0 0 24 24"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></div>
     <span class="slb">LINKEDIN</span>
   </a>
-  <a href="https://twitter.com/theebayo" target="_blank" class="si">
+  <a href="https://twitter.com/adewoleadewaleg" target="_blank" class="si">
     <div class="sic"><svg viewBox="0 0 24 24" stroke-width="2"><path d="M4 4l16 16M4 20L20 4"/></svg></div>
     <span class="slb">X</span>
   </a>
 </div>
 
 <footer>
-  <span>&copy; 2026 ADEDEJI ADEBAYO</span>
+  <span>&copy; 2026 ADEWOLE ADEWALE</span>
   <div class="fl2"><a href="#">PRIVACY</a><a href="#">TERMS</a></div>
   <span>FABRIQU&Eacute; LA NUIT</span>
 </footer>
