--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
   </div>
   <div class="to">
     <div class="tr" id="tr">
-      <div class="pc reveal"><div class="piw"><div class="pi b1">&#128279;</div></div><div class="po"><div class="pn">TEXTCOGNITO</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2026</span></div></div>
-      <div class="pc reveal d1"><div class="piw"><div class="pi b2">&#9876;&#65039;</div></div><div class="po"><div class="pn">ARECNIME</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEBSITE</span><span>2026</span></div></div>
-      <div class="pc reveal d2"><div class="piw"><div class="pi b3">&#128202;</div></div><div class="po"><div class="pn">TOURTECH ADMIN DASHBOARD</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2026</span></div></div>
-      <div class="pc reveal d3"><div class="piw"><div class="pi b4">&#127760;</div></div><div class="po"><div class="pn">PORTFOLIO V1</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEBSITE</span><span>2025</span></div></div>
+      <div class="pc reveal"><div class="piw"><div class="pi b1">&#128279;</div></div><div class="po"><div class="pn">KADIRS</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2025</span></div></div>
+      <div class="pc reveal d1"><div class="piw"><div class="pi b2">&#9876;&#65039;</div></div><div class="po"><div class="pn">LAVISH LOFT</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2027</span></div></div>
+      <div class="pc reveal d2"><div class="piw"><div class="pi b3">&#128202;</div></div><div class="po"><div class="pn">OPX</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2026</span></div></div>
+      <div class="pc reveal d3"><div class="piw"><div class="pi b4">&#127760;</div></div><div class="po"><div class="pn">PORTFOLIO </div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEBSITE</span><span>2026</span></div></div>
     </div>
   </div>
 </section>
@@ -165,26 +165,27 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
     <div class="reveal">
       <div class="sh"><h2 class="st">Education</h2><span class="sn">/ 03</span></div>
       <ul class="tl">
-        <li class="tli"><div class="tld"></div><div><div class="tldt">OCTOBER 2024 &ndash; PRESENT</div><div class="tldg">BSC. SOFTWARE ENGINEERING</div><div class="tlsc">Babcock University</div></div></li>
-        <li class="tli"><div class="tld"></div><div><div class="tldt">JULY 2024 &ndash; OCTOBER 2024</div><div class="tldg">FRONTEND ENGINEERING</div><div class="tlsc">Tech Talent Academy</div></div></li>
-        <li class="tli"><div class="tld"></div><div><div class="tldt">SEPTEMBER 2021 &ndash; JUNE 2024</div><div class="tldg">SECONDARY EDUCATION</div><div class="tlsc">Sacred Heart Catholic College</div></div></li>
+        
+        <li class="tli"><div class="tld"></div><div><div class="tldt">JULY 2021 &ndash; PRESENT</div><div class="tldg">fULL STACK ENGINEERING</div><div class="tlsc">FREELANCING </div></div></li>
+        <li class="tli"><div class="tld"></div><div><div class="tldt">OCTOBER 2013 &ndash; JANUARY 2018</div><div class="tldg">BSC. COMPUTER SCIENCE </div><div class="tlsc">UATM GAZA </div></div></li>
+        <li class="tli"><div class="tld"></div><div><div class="tldt">SEPTEMBER 2010 &ndash; JUNE 2013</div><div class="tldg">SECONDARY EDUCATION</div><div class="tlsc">BISHOP JAME YISA MEMORIALSCHOOL</div></div></li>
       </ul>
     </div>
     <div class="reveal d2">
       <div class="sh"><h2 class="st">Tools</h2><span class="sn">/ 04</span></div>
       <div class="tc">
-        <span class="t tx">React</span>
-        <span class="t tl2">Node.js</span>
-        <span class="t tm">Javascript</span>
+        <span class="t tx">.NET</span>
+        <span class="t tl2">.NET MAUI/span>
+        <span class="t tm">XAMARIN</span>
         <span class="t tx" style="width:100%">HTML</span>
-        <span class="t tl2">Next.js</span>
+        <span class="t tl2">C#</span>
         <span class="t tx thand">MongoDB</span>
-        <span class="t tm">Supabase</span>
-        <span class="t tm">PostgreSQL</span>
-        <span class="t ts">Git</span>
-        <span class="t tl2">Github</span>
-        <span class="t ts">Bootstrap</span>
-        <span class="t tl2 thand">Tailwind</span>
+        <span class="t tm">AZURE</span>
+        <span class="t tm">MYSQL</span>
+        <span class="t ts">DEV OPS</span>
+        <span class="t tl2">GITHUB</span>
+        <span class="t ts">BOOTSTRAP </span>
+        <span class="t tl2 thand">ASP.NET</span>
       </div>
     </div>
   </div>
@@ -192,10 +193,10 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
 
 <!-- MARQUEE -->
 <div class="mq"><div class="mqi">
-  <span class="mqt">/// SUPABASE</span><span class="mqt">/// TAILWIND</span><span class="mqt">/// REACT</span>
-  <span class="mqt">/// NEXTJS</span><span class="mqt">/// MONGODB</span><span class="mqt">/// NODEJS</span>
-  <span class="mqt">/// SUPABASE</span><span class="mqt">/// TAILWIND</span><span class="mqt">/// REACT</span>
-  <span class="mqt">/// NEXTJS</span><span class="mqt">/// MONGODB</span><span class="mqt">/// NODEJS</span>
+  <span class="mqt">/// .NET</span><span class="mqt">/// MAUI</span><span class="mqt">/// XAMARIN</span>
+  <span class="mqt">/// BLAZOR FORMS</span><span class="mqt">/// JAVASCRIPT</span><span class="mqt">/// .NET CORE</span>
+  <span class="mqt">/// C#</span><span class="mqt">/// AZURE</span><span class="mqt">/// MVC</span>
+  <span class="mqt">/// ASP.NET</span><span class="mqt">/// MONGODB</span><span class="mqt">/// MYSQL</span>
 </div></div>
 
 <!-- CONTACT -->
@@ -212,21 +213,21 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
       </form>
     </div>
     <div class="cl reveal d2">
-      <a href="mailto:adedejiadebayo732@gmail.com" class="clc">
+      <a href="mailto:sundayadewole1997@gmail.com" class="clc">
         <svg class="cli" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="2,4 12,13 22,4"/></svg>
-        <div><div class="cll">EMAIL</div><div class="clv">adedejiadebayo732@gmail.com</div></div>
+        <div><div class="cll">EMAIL</div><div class="clv">sundayadewole1997@gmail.com</div></div>
       </a>
-      <a href="https://github.com/adebayo-jzs" target="_blank" class="clc">
+      <a href="https://github.com/AdewoleAdewale" target="_blank" class="clc">
         <svg class="cli" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"/></svg>
-        <div><div class="cll">GITHUB</div><div class="clv">@adebayo-jzs</div></div>
+        <div><div class="cll">GITHUB</div><div class="clv">@adewoleadwale</div></div>
       </a>
-      <a href="https://linkedin.com/in/theebayo" target="_blank" class="clc">
+      <a href="https://www.linkedin.com/in/adewole-adewale-ba45ab147/" target="_blank" class="clc">
         <svg class="cli" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
-        <div><div class="cll">LINKEDIN</div><div class="clv">/in/theebayo</div></div>
+        <div><div class="cll">LINKEDIN</div><div class="clv">/in/adewoleadewale</div></div>
       </a>
-      <a href="https://twitter.com/theebayo" target="_blank" class="clc">
+      <a href="https://twitter.com/adewoleadewaleg" target="_blank" class="clc">
         <svg class="cli" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"><path d="M4 4l16 16M4 20L20 4"/></svg>
-        <div><div class="cll">X</div><div class="clv">@theebayo</div></div>
+        <div><div class="cll">X</div><div class="clv">@adewaoleadewaleG</div></div>
       </a>
     </div>
   </div>
