--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
     <div class="reveal d2">
       <h3 class="th2">Favourite Tracks</h3>
       <div class="ytc">
-        <iframe class="yte" src="https://www.youtube.com/embed/videoseries?list=PLH9MFEklWB5uZO_9IG1TbrLEtFzlwHDwM" title="Favourite Tracks" allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture" allowfullscreen></iframe>
-        <div class="ytb"><div class="ytd"></div>My top tracks playlist &mdash; Watch on YouTube</div>
+         <iframe class="yte" src="https://open.spotify.com/playlist/21fSTvzLcGkx12unbI2nMe?go=1&sp_cid=00536cf70fcf6a0882ef103afb7ee22a&utm_source=embed_player_p&utm_medium=desktop" title="Favourite Tracks" allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture<div class="ytb"><div class="ytd"></div>My top tracks playlist &mdash; Watch on YouTube</div>
       </div>
     </div>
   </div>
@@ -151,10 +150,10 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
   </div>
   <div class="to">
     <div class="tr" id="tr">
-      <div class="pc reveal"><div class="piw"><div class="pi b1">&#128279;</div></div><div class="po"><div class="pn">KADIRS</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2025</span></div></div>
-      <div class="pc reveal d1"><div class="piw"><div class="pi b2">&#9876;&#65039;</div></div><div class="po"><div class="pn">LAVISH LOFT</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2027</span></div></div>
-      <div class="pc reveal d2"><div class="piw"><div class="pi b3">&#128202;</div></div><div class="po"><div class="pn">OPX</div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2026</span></div></div>
-      <div class="pc reveal d3"><div class="piw"><div class="pi b4">&#127760;</div></div><div class="po"><div class="pn">PORTFOLIO </div><a href="#" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEBSITE</span><span>2026</span></div></div>
+      <div class="pc reveal"><div class="piw"><div class="pi b1">&#128279;</div></div><div class="po"><div class="pn">KADIRS</div><a href="https://kadirs.kdsg.gov.ng" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2025</span></div></div>
+      <div class="pc reveal d1"><div class="piw"><div class="pi b2">&#9876;&#65039;</div></div><div class="po"><div class="pn">LAVISH LOFT</div><a href="https://lavishlofthospitality.com" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2027</span></div></div>
+      <div class="pc reveal d2"><div class="piw"><div class="pi b3">&#128202;</div></div><div class="po"><div class="pn">OPX</div><a href="https://opxng.com/" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEB APPLICATION</span><span>2026</span></div></div>
+      <div class="pc reveal d3"><div class="piw"><div class="pi b4">&#127760;</div></div><div class="po"><div class="pn">PORTFOLIO </div><a href="https://adewoleadewale.github.io/" class="vb">VIEW PROJECT</a></div><div class="pm"><span>WEBSITE</span><span>2026</span></div></div>
     </div>
   </div>
 </section>
@@ -239,7 +238,7 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
     <div class="sic"><svg viewBox="0 0 24 24"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"/></svg></div>
     <span class="slb">GITHUB</span>
   </a>
-  <a href="https://www.linkedin.com/in/adewole-adewale-ba45ab147/" target="_blank" class="si">
+  <a href="https://www.linkedin.com/in/adewole-adewale-ba45ab147" target="_blank" class="si">
     <div class="sic"><svg viewBox="0 0 24 24"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></div>
     <span class="slb">LINKEDIN</span>
   </a>
