--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
       <div class="sh"><h2 class="st">Tools</h2><span class="sn">/ 04</span></div>
       <div class="tc">
         <span class="t tx">.NET</span>
-        <span class="t tl2">.NET MAUI/span>
+        <span class="t tl2">.NET MAUI</span>
         <span class="t tm">XAMARIN</span>
         <span class="t tx" style="width:100%">HTML</span>
         <span class="t tl2">C#</span>
@@ -222,7 +222,7 @@ footer{padding:22px 48px;display:flex;justify-content:space-between;align-items:
       </a>
       <a href="https://www.linkedin.com/in/adewole-adewale-ba45ab147/" target="_blank" class="clc">
         <svg class="cli" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
-        <div><div class="cll">LINKEDIN</div><div class="clv">/in/adewoleadewale</div></div>
+        <div><div class="cll">LINKEDIN</div><div class="clv">@adewoleadewale</div></div>
       </a>
       <a href="https://twitter.com/adewoleadewaleg" target="_blank" class="clc">
         <svg class="cli" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"><path d="M4 4l16 16M4 20L20 4"/></svg>
