--- a/index.html
+++ b/index.html
@@ -437,14 +437,19 @@ footer{padding:20px 80px;display:flex;justify-content:space-between;align-items:
         <span class="tracks-badge">NOW PLAYING</span>
       </div>
        <div class="yt-card">
-        <div class="yt-card">
-       <iframe title="Spotify Embed: Recommendation Playlist " src="https://open.spotify.com/embed/playlist/21fSTvzLcGkx12unbI2nMe?utm_source=generator&theme=0" width="100%" height="100%" style="min-height:360px" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+        <iframe
+          class="yt-embed"
+          src="https://www.youtube.com/embed/videoseries?list=PLH9MFEklWB5uZO_9IG1TbrLEtFzlwHDwM"
+          title="Favourite Tracks Playlist"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
         <div class="yt-footer">
           <div class="yt-info">
             <div class="yt-dot"></div>
             <span class="yt-txt">Top tracks playlist</span>
           </div>
-          <a href="https://open.spotify.com" target="_blank" class="yt-open">OPEN</a>
+          <a href="https://youtube.com" target="_blank" class="yt-open">OPEN</a>
         </div>
       </div>
     </div>
