--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ footer{padding:20px 80px;display:flex;justify-content:space-between;align-items:
   </ul>
   <div class="nav-right">
     <div class="nav-status"><div class="ndot"></div><span>Available for work</span></div>
-    <a href="#contact" class="nav-cta"><span>Let's Talk</span></a>
+    <a href="https://wa.me/qr/PB7BQMOIEWHJC1" class="nav-cta"><span>Let's Talk</span></a>
   </div>
 </nav>
 
@@ -438,7 +438,7 @@ footer{padding:20px 80px;display:flex;justify-content:space-between;align-items:
        <div class="yt-card">
         <iframe
           class="yt-embed"
-          src="https://www.youtube.com/embed/videoseries?list=PLH9MFEklWB5uZO_9IG1TbrLEtFzlwHDwM"
+          src="https://www.youtube.com/watch?v=Y69WydyX-6I&list=PL3WT_x1TzHN4eaxDpjlAGp75X7Hc_k2aa"
           title="Favourite Tracks Playlist"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
